# srcm-engine

./: .gitignore  00_HybridModel_quickstart.ipynb  01_AB_switching_user_api.ipynb  README.md  check_engine.py  make_ic_turing_bump.py  minimal_working_example.py  pyproject.toml  switching.py  switching_new_reaction.py  turing_adding_original_reaction.py  turing_example.py  turing_run.py  view_npz.py  visualise.py
data/: new_file_20260107_161437.json  si_hybrid_mean.json
examples/: 00_HybridModel_quickstart.ipynb  01_AB_switching_user_api.ipynb  02_Turing_hybrid_bump_user_api.ipynb
gui/: app.py
gui/backend/: __init__.py  builder.py  io_npz.py  mass_action.py  render_animation.py
gui/pages/: 1_Run_Model.py
gui/presets/: Turing_hybrid_bump.json
misc/: check_reactions.py  domain_check.py  turing_run.py
srcm_engine/: __init__.py
srcm_engine 2/: __init__.py
srcm_engine 2/animation_util/: __init__.py  animate.py
srcm_engine 2/conversion/: __init__.py
srcm_engine 2/core/: __init__.py  engine.py  user_api.py
srcm_engine 2/diffusion/: ssa_diffusion.py
srcm_engine 2/pde/: __init__.py  spatial_operators.py
srcm_engine 2/results/: ssa_results.py
srcm_engine 2/state/: __init__.py  (+1 more)
tests/: test_conversion_params.py  test_conversion_sufficient_mask.py  test_decompose_reactions.py  test_domain.py  test_engine_apply_event.py  test_engine_propensites.py  test_engine_repeats.py  test_hybrid_state.py  test_reactions.py  test_regime_utils.py  test_results_io.py  test_results_recording.py  test_rk4_integrator.py  test_spatial_operator.py  test_ssa_diffusion.py
(+18 files in other folders)
