[tool.poetry]
name = "srcm-engine"
version = "0.1.0"
description = ""
authors = ["Cgyc20 <cgyc20@bath.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[project]
name = "srcm_engine"
version = "0.1.0"
dependencies = [
    "numpy"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
